python is case sensitive

--- a/01-Python Basics/basic.ipynb
+++ b/01-Python Basics/basic.ipynb
@@ -1,20 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### My first Python code"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chandoo\n",
+      "Magan\n"
+     ]
+    }
+   ],
    "source": [
     "## Basic Syntax Rules In Python\n",
-    "## Case sensitivity"
+    "## Case sensitivity - python is case sensitive\n",
+    "\n",
+    "name = \"Chandoo\"\n",
+    "Name = \"Magan\"\n",
+    "print(name)\n",
+    "print(Name)"
    ]
   }
  ],
