basic concepts of Python

--- a/01-Python Basics/basic.ipynb
+++ b/01-Python Basics/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,156 @@
     "Name = \"Magan\"\n",
     "print(name)\n",
     "print(Name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Indentation\n",
+    "## Python needs indentation to define block of code. Tab is required\n",
+    "\n",
+    "age = 32\n",
+    "if age >30:\n",
+    "    print(age)\n",
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Single Line comment\n",
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Line Continuation\n",
+    "\n",
+    "total=1+2+3+4+6+7+8+\\\n",
+    "    9+1+1+2+\\\n",
+    "        4+6\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Multiple Statment in single Line??\n",
+    "x=5; y=10; z = x+y\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Understand Sementics In Python\n",
+    "#variable assignment\n",
+    "\n",
+    "age = 32 ##age is an integer\n",
+    "name = \"Lallu\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(age)\n",
+    "type(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Type inference\n",
+    "variable  = 10\n",
+    "print(type(variable))\n",
+    "variable = \"Chaman\"\n",
+    "print(type(variable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Name Error\n",
+    "\n",
+    "a= 1"
    ]
   }
  ],
