--- a/01-Python Basics/loops.ipynb
+++ b/01-Python Basics/loops.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +174,141 @@
     "while count < 5 :\n",
     "    print(count)\n",
     "    count=count+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "count  = 0\n",
+    "\n",
+    "while count % 2 == 0:\n",
+    "    print(count)\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "## loop control Statments\n",
+    "\n",
+    "## BreaK statement\n",
+    "for i in range(10):\n",
+    "    if i == 6:\n",
+    "        break\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "## loop control Statments\n",
+    "\n",
+    "## Continue statement\n",
+    "for i in range(10):\n",
+    "    if i%2 == 0:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "The Number is  3\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Pass Statment\n",
+    "\n",
+    "for i in range(10) :\n",
+    "    if i == 3: \n",
+    "        print(\"The Number is \", i)\n",
+    "        pass\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i: 0 and k : 0\n",
+      "i: 0 and k : 1\n",
+      "i: 1 and k : 0\n",
+      "i: 1 and k : 1\n",
+      "i: 2 and k : 0\n",
+      "i: 2 and k : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Nested Loop\n",
+    "\n",
+    "for i in range(3):\n",
+    "    for j in range(2):\n",
+    "        print(f\"i: {i} and k : {j}\")"
    ]
   }
  ],
