--- a/01-Python Basics/loops.ipynb
+++ b/01-Python Basics/loops.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +309,106 @@
     "for i in range(3):\n",
     "    for j in range(2):\n",
     "        print(f\"i: {i} and k : {j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of first 10 natural numbers :  55\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example  - Calculate the sum of first N Natural Numbers using a while and for loop\n",
+    "\n",
+    "## while loop\n",
+    "n=10\n",
+    "sum=0\n",
+    "count=1\n",
+    "while count <= n :\n",
+    "    sum = sum + count\n",
+    "    count = count + 1\n",
+    "    \n",
+    "print(\"Sum of first 10 natural numbers : \", sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "## using for loop for above example\n",
+    "n=10\n",
+    "sum=0\n",
+    "\n",
+    "for i in range(11) : \n",
+    "    sum = sum + i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example - Prime Number between 1 and 100\n",
+    "\n",
+    "\n",
+    "for num in range(1,101):\n",
+    "    if num > 1 :\n",
+    "        for i in range(2,num):\n",
+    "            if num % i == 0 :\n",
+    "                break\n",
+    "        else:\n",
+    "            print(num)"
    ]
   }
  ],
