--- a/02- DataStructure/Lists.ipynb
+++ b/02- DataStructure/Lists.ipynb
@@ -143,20 +143,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'Melon', 'banana', 'cherry', 'Kiwi', 'Graps', 'orange', 'orange', 'orange']\n"
+      "['apple', 'Melon', 'Melon', 'banana', 'cherry', 'Kiwi', 'Graps', 'orange', 'orange', 'orange']\n"
      ]
     }
    ],
    "source": [
     "fruits.insert(1, \"Melon\")\n",
     "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'Melon', 'banana', 'cherry', 'Kiwi', 'Graps']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.remove(\"Melon\")\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kiwi\n",
+      "['apple', 'Melon', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Remove and return the last\n",
+    "popped_fruits = fruits.pop()\n",
+    "print(popped_fruits)\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[6, 7, 89, 9, 20, 10, 12]\n",
+      "[1, 3, 5, 7, 9, 10]\n",
+      "[12, 10, 20, 9, 89, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Slicing List\n",
+    "numbers = [1,2,3,4,5,6,7,89,9,20,10,12]\n",
+    "print(numbers[2:5])\n",
+    "print(numbers[:5])\n",
+    "print(numbers[5:])\n",
+    "print(numbers[::2])\n",
+    "print(numbers[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "Melon\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Iterating over lists\n",
+    "\n",
+    "for fruit in fruits:\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "89\n",
+      "9\n",
+      "20\n",
+      "10\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Iterating over lists\n",
+    "\n",
+    "for number in numbers:\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "89\n",
+      "9\n",
+      "20\n",
+      "10\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Iterating with index\n",
+    "for index,number in enumerate(numbers):\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## List Comprehension\n",
+    "\n",
+    "lst=[]\n",
+    "for x in range(10):\n",
+    "    lst.append(x**2)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x**2 for x in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "###Basic List Comprehension\n",
+    "square=[num**2 for num in range(10)]\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "##with conditrions\n",
+    "lst=[]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if i%2 == 0:\n",
+    "        lst.append(i)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_numbers = [num for num in range(10) if num%2==0]\n",
+    "print(even_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'a'), (1, 'b'), (1, 'c'), (1, 'd'), (2, 'a'), (2, 'b'), (2, 'c'), (2, 'd'), (3, 'a'), (3, 'b'), (3, 'c'), (3, 'd'), (5, 'a'), (5, 'b'), (5, 'c'), (5, 'd'), (6, 'a'), (6, 'b'), (6, 'c'), (6, 'd')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### NESTED lists comprehension\n",
+    "\n",
+    "lst=[1,2,3,5,6]\n",
+    "lst2=['a','b','c','d']\n",
+    "\n",
+    "pair=[(i,j) for i in lst for j in lst2]\n",
+    "print(pair)"
    ]
   }
  ],
