--- a/02- DataStructure/Lists.ipynb
+++ b/02- DataStructure/Lists.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +432,26 @@
     "\n",
     "pair=[(i,j) for i in lst for j in lst2]\n",
     "print(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 5, 4, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "##List comprehensions with function calls\n",
+    "words = [\"hello\",\"python\",\"world\",\"list\", \"comprehensions\"]\n",
+    "lengths= [len(word) for word in words]\n",
+    "print(lengths)"
    ]
   }
  ],
